Fix for plan header overflow 2

--- a/backend/web/static/retromat.css
+++ b/backend/web/static/retromat.css
@@ -179,7 +179,7 @@
     .plan-header .inner {
         display: flex;
         overflow: hidden;
-        
+
         flex-direction: row; 
         flex-wrap: wrap; 
         align-items: center;
@@ -314,6 +314,7 @@
     }
 
     .plan-header-promo {
+        overflow: hidden;
         flex-shrink: 0;
     }
 
